[tool.poetry]
name = "denoising"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
pandas = "1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
